2003-11-28  Christopher Faylor  <cgf@redhat.com>

	* pinfo.h (_pinfo::getsig): Remove obsolete function, here and
	throughout.
	* exceptions.cc: Ditto.
	* fhandler_termios.cc: Ditto.
	* signal.cc: Ditto.
	* sigproc.cc: Ditto.

	* Makefile.in: Revert previous change which made a cygwin.din newer
	than a version.h a warning rather than an error.

2003-11-28  Christopher Faylor  <cgf@redhat.com>

	* cygwin.din: Re-add inexplicably missing semaphore/msg functions.

2003-11-28  Christopher Faylor  <cgf@redhat.com>

	* gendevices: Issue error when shilka is missing.

2003-11-28  Christopher Faylor  <cgf@redhat.com>

	* include/cygwin/signal.h: New file.

2003-11-28  Christopher Faylor  <cgf@redhat.com>

	Eliminate use of sigframe and sigthread throughout.
	* Makefile.in (DLL_OFILES): Add sigfe.o.  Remove reliance on cygwin.def
	from cygwin0.dll dependency since dependence on sigfe.o implies that.
	Generate def file on the fly using 'gendef'.
	* configure.in: Don't auto-generate cygwin.def.
	* configure: Regenerate.
	* cygwin.din: Add SIGFE stuff where appropriate.
	* dcrt0.cc (dll_crt0_1): Initialize cygwin tls early in process
	startup.  Set _main_tls to address of the main thread's cygwin tls.
	* debug.h: Remove now unneeded WFSO and WFMO declarations.
	* exceptions.cc (_last_thread): Define.
	(set_thread_state_for_signals): New function.
	(reset_thread_exception_for_signals): Ditto.
	(init_thread_for_signals): Ditto.
	(delete_thread_for_signals): Ditto.
	(capture_thread_for_signals): Ditto.
	(handle_exceptions): Set return address explicitly for exceptions prior
	to calling sig_send.
	(interrupt_on_return): Eliminate.
	(setup_handler): Add preliminary implementation for dealing with
	thread-specific signals by querying _main_tls.
	(signal_exit): Use cygthread::main_thread_id instead of mainthread.id.
	(call_signal_handler_now): For now, just handle the main thread.
	* fork.cc (vfork): Save and restore main _my_tls.