@@ -6,17 +6,11 @@ On process startup, cygwin starts a secondary thread that deals with signals.
 This thread contains a loop which blocks waiting for information to show up
 on a pipe whose handle (sendsig) is currently stored in _pinfo (this may change).
 
-If one of these is activated, then the the signal handler inspects an
-array of integers looking for a non-zero value.  The array corresponds
-to the normal UNIX signals + two extra locations for internal usage.
-This array is located in the 'sigtodo' array in the procinfo class.
-
-The signal thread uses the InterlockedDecrement function to atomically
-inspect elements of the array.  If one one of the elements of the array
-is non-zero, then cygwin checks to see if the user has blocked the
-signal by inspecting the process signal mask.  If the signal is blocked,
-then the current array element is reincremented and the next element is
-checked.
+Communication on the sendsig pipe is via the 'sigelem' structure.  This
+structure is filled out by the sig_send function with information about the
+signal being sent, such as (as of this writing) the signal number, the
+originating pid, the originating thread, and the address of the mask to
+use (this may change).
 
 If the signal is not blocked, then the function "sig_handle" is called
 with the signal number as an argument.  This is a fairly straightforward
